# Bilioteca_Sistema

./: README.md  pyproject.toml
sistema_biblioteca/bilioteca/: admin.py  models.py  serializers.py  views.py
sistema_biblioteca/bilioteca/migrations/: 0001_initial.py  0002_alter_aluno_curso_alter_aluno_nome_and_more.py
sistema_biblioteca/config/: settings.py  urls.py
